# advent-of-code-2021

./: .gitignore  Cargo.toml  README.md  day24.nb
.github/workflows/: rust.yml
array/: Cargo.toml
array/src/: lib.rs
day_1/: Cargo.toml
day_1/benches/: day_1.rs
day_1/src/: lib.rs  main.rs
day_10/: Cargo.toml
day_10/benches/: bench.rs
day_10/src/: lib.rs  main.rs
day_11/: Cargo.toml
day_11/benches/: bench.rs
day_11/src/: lib.rs  main.rs
day_12/: Cargo.toml
day_12/benches/: bench.rs
day_12/src/: lib.rs  main.rs
day_13/: Cargo.toml  day13.m
day_13/benches/: bench.rs
day_13/src/: lib.rs  main.rs
day_14/: Cargo.toml  day14.m
day_14/benches/: bench.rs
day_14/src/: lib.rs  main.rs
day_15/: Cargo.toml  day15.m
day_15/benches/: bench.rs
day_15/src/: lib.rs  main.rs
day_16/: Cargo.toml
day_16/benches/: bench.rs
day_16/src/: lib.rs  main.rs
day_17/: Cargo.toml  day17.m
day_17/benches/: bench.rs
day_17/src/: lib.rs  main.rs
day_18/: Cargo.toml  day18.m
day_18/benches/: bench.rs
day_18/src/: lib.rs  main.rs
day_19/: Cargo.toml
day_19/benches/: bench.rs
day_19/src/: lib.rs  main.rs
day_2/: Cargo.toml  day_1.m
day_2/benches/: day_2.rs
day_2/src/: lib.rs  main.rs
day_20/: Cargo.toml  day20.m
day_20/benches/: bench.rs
day_20/src/: lib.rs  main.rs
day_21/: Cargo.toml  day21.m
day_25/: Cargo.toml
day_3/: Cargo.toml
day_3/benches/: day_3.rs
day_3/src/: lib.rs  main.rs
day_4/: Cargo.toml  day_4.m
day_5/: Cargo.toml
day_6/: Cargo.toml
day_7/: Cargo.toml
day_8/: Cargo.toml
day_9/: Cargo.toml
(+24 files in other folders)
