[package]
name = "day_13"
version = "0.1.0"
authors = ["Smaug123 <patrick+github@patrickstevens.co.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array = { path = "../array" }
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
